@@ -5,20 +5,21 @@ import org.jetbrains.annotations.NotNull;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.Arrays;
 
 public class PreMain {
     public static void main(String[] args) throws IOException {
         System.out.println("Premain called with args: " + Arrays.toString(args));
-        var osName = System.getProperty("os.name").toLowerCase();
+        String osName = System.getProperty("os.name").toLowerCase();
 
         Path appData;
-        if (osName.startsWith("windows")) appData = Path.of(System.getenv("APPDATA"));
-        else if (osName.startsWith("linux")) appData = Path.of(System.getProperty("user.home") + "/.config/");
-        else if (osName.startsWith("mac")) appData = Path.of(System.getProperty("user.home") + "/Library/Applications Support");
+        if (osName.startsWith("windows")) appData = Paths.get(System.getenv("APPDATA"));
+        else if (osName.startsWith("linux")) appData = Paths.get(System.getProperty("user.home") + "/.config/");
+        else if (osName.startsWith("mac")) appData = Paths.get(System.getProperty("user.home") + "/Library/Applications Support");
         else throw new UnsupportedOperationException("Unsupported OS: " + System.getProperty("os.name"));
 
-        var dataDir = appData.resolve("UltreonBrowser");
+        Path dataDir = appData.resolve("UltreonBrowser");
         try {
             Files.createDirectories(dataDir);
         } catch (IOException ignored) {
@@ -38,7 +39,7 @@ public class PreMain {
      * Posix API wrapper for the PreMain.C library.
      * Used for setting the current working directory.
      */
-    @SuppressWarnings({"UnusedReturnValue", "SpellCheckingInspection"})
+    @SuppressWarnings({"UnusedReturnValue"})
     interface C extends Library {
         C INSTANCE = Native.load("c", C.class);
 
